--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -111,6 +111,14 @@ h2{
 	margin-bottom: 20px;
 	font-size: 15px;
 }
+.projects-container{
+	flex-direction: column;
+	display: flex;
+    margin: 0 2rem;
+}
+.projects-container a:first-child{
+	margin-top:0;
+}
 .skills-item-container:hover img{
 	transform: scale(1.2);
 }
@@ -206,6 +214,10 @@ h2{
 		flex-direction: column;	
 		margin-top: 1rem;
 	}
+	.projects-container{
+    flex-wrap: wrap;
+		justify-content: center;
+	}
 	h1 {
 		font-size:30px;
 	}
@@ -242,40 +254,19 @@ h2{
     text-align: center;
     margin: 10px;
     padding: 30px;
-		width: 5rem;
-    height: 5rem;
+		width: 4rem;
+    height: 4rem;
 		font-size: 14px;
-		justify-content: space-between;
+		justify-content: space-evenly;
 	}
 	.projects-item-container{
 		display: flex;
-		flex-wrap: wrap;
 		justify-content: center;
 	}
 	.projects-container img{
 		margin-right: 0;
 	}
-/* .content-container{
-	flex-direction: column;	
-}
-.content-container p{
-	font-size: 1.4rem;
-	text-align: center;
-}
-.content-container img{
-	width:150px;
-}
 
-
-.content-container .first-part,.content-container .second-part{
-	width: 100%;
-}
-.first-part{
-	margin: 30px 0;
-}
-.social-media-container{
-	justify-content: center;
-} */
 }
 
 /* width */
