mobile projects fixed

--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -217,6 +217,7 @@ h2{
 	.projects-container{
     flex-wrap: wrap;
 		justify-content: center;
+		flex-direction: row;
 	}
 	h1 {
 		font-size:30px;
