--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -148,7 +148,7 @@ h2{
 	display: flex;
 	align-items: center;
 	padding: 20px;
-	margin: 30px;
+	margin: 15px;
 	font-family: monospace;
 	font-size: 20px;
 	color:   white;
@@ -213,6 +213,9 @@ h2{
 	.skills-and-projects{
 		flex-direction: column;	
 		margin-top: 1rem;
+	}
+	.projects-container a:first-child{
+		margin-top:10px;
 	}
 	.projects-container{
     flex-wrap: wrap;
