--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -134,9 +134,6 @@ h2{
 	transition: all .3s;
 	z-index: -1;
 }
-.projects-container .project:hover .projects-hover-item{
-	width: 100%;
-}
 
 .black-bg{
 	background-color: #1d1d1d;
@@ -152,9 +149,9 @@ h2{
 	font-family: monospace;
 	font-size: 20px;
 	color:   white;
+	border-left: 1px solid white;
 	text-decoration: none;
 	position: relative;
-	border-left: 1px solid white;
 	text-align: left;
 	font-family: 'Open Sans', cursive;
 }
@@ -209,7 +206,16 @@ h2{
 .social-media-item.linkedin:hover svg path{
 	fill: #0077B5;
 }
+@media only screen and (min-width:1024px) {
+	.projects-container .project:hover .projects-hover-item{
+		width: 100%;
+	}
+
+	
+}
 @media only screen and (max-width:1024px) {
+
+
 	.skills-and-projects{
 		flex-direction: column;	
 		margin-top: 1rem;
@@ -249,9 +255,6 @@ h2{
 		border-bottom-right-radius: 30px;
 	}
 	.projects-container .project{
-		background-color: white;
-    border-radius: 30px;
-    color: black;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -262,6 +265,10 @@ h2{
     height: 4rem;
 		font-size: 14px;
 		justify-content: space-evenly;
+		background-color: transparent;
+		border-left:0;
+		border-bottom:1px solid white;
+		color:white;
 	}
 	.projects-item-container{
 		display: flex;
@@ -269,6 +276,14 @@ h2{
 	}
 	.projects-container img{
 		margin-right: 0;
+	}
+	.projects-container .project .projects-hover-item{
+		bottom: 0;
+		width: 100%;
+		height: 0;
+	}
+	.projects-container .project:hover .projects-hover-item{
+		height: 100%;
 	}
 
 }
