--- a/static/assets/main.css
+++ b/static/assets/main.css
@@ -126,14 +126,17 @@ h2{
 	margin-right: 12px;
 }
 .projects-container .projects-hover-item{
-	left:0;
-	position:absolute;
-	height: 100%;
-	width: 0;
+	left: 0;
+	top: 0;
+	position: absolute;
+	height: 0;
+	width: 100%;
 	background-color: white;
 	transition: all .3s;
 	z-index: -1;
 }
+
+
 
 .black-bg{
 	background-color: #1d1d1d;
@@ -149,11 +152,19 @@ h2{
 	font-family: monospace;
 	font-size: 20px;
 	color:   white;
-	border-left: 1px solid white;
 	text-decoration: none;
 	position: relative;
 	text-align: left;
 	font-family: 'Open Sans', cursive;
+	border: 1px solid;
+	border-image-source: linear-gradient(165deg, #ffffffb8,transparent,transparent,transparent, #ffffffb8);
+	border-image-slice: 1;
+	overflow: hidden;
+	transition: all 1s;
+
+}
+.projects-container .project:hover {
+	border-image-source: linear-gradient(180deg, white, white);
 }
 
 .projects-container .project:hover{
@@ -208,7 +219,8 @@ h2{
 }
 @media only screen and (min-width:1024px) {
 	.projects-container .project:hover .projects-hover-item{
-		width: 100%;
+	transition-delay:.3s;
+		height: 100%;
 	}
 
 	
@@ -266,7 +278,6 @@ h2{
 		font-size: 14px;
 		justify-content: space-evenly;
 		background-color: transparent;
-		border-left:0;
 		border-bottom:1px solid white;
 		color:white;
 	}
