--- a/assets/main.css
+++ b/assets/main.css
@@ -1,302 +1,468 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&family=Fredoka+One&family=Open+Sans:wght@300&family=Caveat+Brush&family=Satisfy&display=swap');
-body{
-	background-color: #1D1D1D;
-	font-family: 'Open Sans', sans-serif;
-	margin: 0;
-	color: white;
-	text-align: center;
-	padding-bottom: 50px;
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&family=Fredoka+One&family=Open+Sans:wght@300&family=Caveat+Brush&family=Satisfy&display=swap");
+body {
+  background-color: #1d1d1d;
+  font-family: "Open Sans", sans-serif;
+  margin: 0;
+  color: white;
+  text-align: center;
+  padding-bottom: 50px;
 }
-.top-line{
-	background-color: #f5f5f5;
-	height: 2px;
-	z-index: 1;
+.top-line {
+  background-color: #f5f5f5;
+  height: 2px;
+  z-index: 1;
 }
-.background-logo{
-	background-image: url(./logo.svg);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: 25rem;
-	position: absolute;
-	right: 45%;
-	top: 0;
-	width: 100%;
-	height: 100vh;
-	opacity: .1;
-	z-index: -1;
-}
-
-.content-container{
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-top: 1rem;
-}
-.content-container p{
-	font-size: 1.2rem;
-	/* text-align: left; */
-	color:#dbdbdb;
+.background-logo {
+  background-image: url(./logo.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 25rem;
+  position: absolute;
+  right: 45%;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  opacity: 0.1;
+  z-index: -1;
 }
 
-.content-container img{
-	width: 300px;
+.content-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 1rem;
+}
+.content-container p {
+  font-size: 1.2rem;
+  /* text-align: left; */
+  color: #dbdbdb;
 }
 
-.content-container .first-part{
-	width: 40%;
-}
-.content-container .second-part{
-	width: 60%;
-}
-.skills-and-projects{
-	display: flex;
-	margin-top: 3rem;
-}
-.skills-and-projects h5{
-	font-size: 1.3rem;
-	font-family: "Caveat Brush", cursive;
-}
-.skills-and-projects img{
-	height:2rem;
-	width: fit-content;
-	transition: transform .1s;
+.content-container img {
+  width: 300px;
 }
 
-h1{
-	font-size: 60px;
+.content-container .first-part {
+  width: 40%;
+}
+.content-container .second-part {
+  width: 60%;
+}
+.skills-and-projects {
+  display: flex;
+  margin-top: 3rem;
+}
+.skills-and-projects h5 {
+  font-size: 1.3rem;
+  font-family: "Caveat Brush", cursive;
+}
+.skills-and-projects img {
+  height: 2rem;
+  width: fit-content;
+  transition: transform 0.1s;
+}
+
+h1 {
+  font-size: 60px;
   margin-top: 25px;
-	margin-bottom: 10px;
-	font-family: "Baloo 2";
+  margin-bottom: 10px;
+  font-family: "Baloo 2";
 }
 
-h2{
-	font-size: 30px;
-	margin: 3px;
-	font-family: 'Satisfy', cursive;
+h2 {
+  font-size: 30px;
+  margin: 3px;
+  font-family: "Satisfy", cursive;
 }
 
+.social-media-container {
+  display: flex;
+  justify-content: center;
+  border-radius: 30px;
+  width: fit-content;
+  margin: auto;
+  margin-top: 3rem;
 
-.social-media-container{
-	display: flex;
-	justify-content: center;
-	border-radius: 30px;
-	width: fit-content;
-	margin-top: 3rem;
-	
-	position: fixed;
-	bottom: 0;
-	right: 0;
-	flex-direction: column;
-	border-bottom-right-radius: 0;
-}
-
-.social-media-item{
-	padding: 20px;
-	width: 20px;
-	height: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	transition: all .3s;
-	background-color: white;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  flex-direction: column;
+  border-bottom-right-radius: 0;
 }
 
-.skills-item-container{
-	display:flex;
-	flex-direction: column;
-	align-items: center;
-	width: fit-content;
-	margin-right: 20px;
-	margin-bottom: 20px;
-	font-size: 15px;
-}
-.projects-container{
-	flex-direction: column;
-	display: flex;
-    margin: 0 2rem;
-}
-.projects-container a:first-child{
-	margin-top:0;
-}
-.skills-item-container:hover img{
-	transform: scale(1.2);
-}
-.projects-container img{
-	margin-right: 12px;
-}
-.projects-container .projects-hover-item{
-	left: 0;
-	top: 0;
-	position: absolute;
-	height: 0;
-	width: 100%;
-	background-color: white;
-	transition: all .3s;
-	z-index: -1;
+.social-media-item {
+  padding: 20px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s;
+  background-color: white;
 }
 
-
-
-.black-bg{
-	background-color: #1d1d1d;
-	padding: 5px;
+.skills-item-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+.github-accounts-container {
+  flex-direction: column;
+  display: flex;
+  margin: 0 2rem;
+}
+.github-accounts-container a:first-child {
+  margin-top: 0;
+}
+.skills-item-container:hover img {
+  transform: scale(1.2);
+}
+.github-accounts-container img {
+  margin-right: 12px;
+}
+.github-accounts-container .account-hover-item {
+  left: 0;
+  top: 0;
+  position: absolute;
+  height: 0;
+  width: 100%;
+  background-color: white;
+  transition: all 0.3s;
+  z-index: -1;
 }
 
-.projects-container .project {
-	width: 15rem;
-	display: flex;
-	align-items: center;
-	padding: 20px;
-	margin: 15px;
-	font-family: monospace;
-	font-size: 20px;
-	color:   white;
-	text-decoration: none;
-	position: relative;
-	text-align: left;
-	font-family: 'Open Sans', cursive;
-	border: 1px solid;
-	border-image-source: linear-gradient(165deg, #ffffffb8,transparent,transparent,transparent, #ffffffb8);
-	border-image-slice: 1;
-	overflow: hidden;
-	transition: all 1s;
-
-}
-.projects-container .project:hover {
-	border-image-source: linear-gradient(180deg, white, white);
+.black-bg {
+  background-color: #1d1d1d;
+  padding: 5px;
 }
 
-.projects-container .project:hover{
-	color:   rgb(20, 20, 20);
+.github-accounts-container .account {
+  width: 15rem;
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  margin: 15px;
+  font-family: monospace;
+  font-size: 20px;
+  color: white;
+  text-decoration: none;
+  position: relative;
+  text-align: left;
+  font-family: "Open Sans", cursive;
+  border: 1px solid;
+  border-image-source: linear-gradient(
+    165deg,
+    #ffffffb8,
+    transparent,
+    transparent,
+    transparent,
+    #ffffffb8
+  );
+  border-image-slice: 1;
+  overflow: hidden;
+  transition: all 1s;
+}
+.github-accounts-container .account:hover {
+  border-image-source: linear-gradient(180deg, white, white);
 }
 
-
-.skills-group{
-	display: flex;flex-wrap: wrap;
+.github-accounts-container .account:hover {
+  color: rgb(20, 20, 20);
 }
 
-.p-100{
-	padding: 0 100px;
-}
-.bg-white{
-	background-color: white;
+.skills-group {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.social-media-item.twitter{
-	border-top-left-radius: 30px;
-	border-top-right-radius: 30px;
+.p-100 {
+  padding: 0 100px;
+}
+.bg-white {
+  background-color: white;
+}
+
+.social-media-item.twitter {
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
 }
 
 .social-media-item svg {
-	transition: all .3s;
-	width: 75%;
+  transition: all 0.3s;
+  width: 75%;
 }
 .social-media-item:hover svg {
-	width: 100%;
+  width: 100%;
 }
-.social-media-item svg path{
-	fill: #1D1D1D;
-	transition: all .3s;
-}
-
-.social-media-item.twitter:hover svg path{
-	fill: #1DA1F2;
-
-}
-.social-media-item.telegram:hover svg path{
-	fill: #0088cc;
-}
-.social-media-item.github{
-	border-bottom-left-radius: 30px;
-}
-.social-media-item.github:hover svg path{
-	fill: #24292e;
+.social-media-item svg path {
+  fill: #1d1d1d;
+  transition: all 0.3s;
 }
 
-.social-media-item.linkedin:hover svg path{
-	fill: #0077B5;
+.social-media-item.twitter:hover svg path {
+  fill: #1da1f2;
 }
-@media only screen and (min-width:1024px) {
-	.projects-container .project:hover .projects-hover-item{
-	transition-delay:.3s;
-		height: 100%;
-	}
-
-	
+.social-media-item.telegram:hover svg path {
+  fill: #0088cc;
 }
-@media only screen and (max-width:1024px) {
+.social-media-item.github {
+  border-bottom-left-radius: 30px;
+}
+.social-media-item.github:hover svg path {
+  fill: #24292e;
+}
 
+.social-media-item.linkedin:hover svg path {
+  fill: #0077b5;
+}
 
-	.skills-and-projects{
-		flex-direction: column;	
-		margin-top: 1rem;
-	}
-	.projects-container a:first-child{
-		margin-top:10px;
-	}
-	.projects-container{
+/* projects */
+.projects {
+  margin: 10rem;
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.project {
+  display: flex;
+  background: linear-gradient(
+    165deg,
+    rgba(22, 22, 22, 1),
+    rgba(49, 49, 49, 0.5)
+  );
+  padding: 2rem;
+  color: white;
+  text-decoration: none;
+  text-align: left;
+  transition: all 0.3s;
+}
+
+.project:hover {
+  box-shadow: 5px 7px 8px 3px #15151570;
+}
+
+.project img.project-image {
+  margin-left: -4rem;
+  height: fit-content;
+  position: sticky;
+  top: 20px;
+  border: 1px solid;
+  border-image-source: linear-gradient(
+    165deg,
+    rgba(255, 255, 255, 0.72157),
+    transparent,
+    transparent,
+    transparent,
+    rgba(255, 255, 255, 0.72157)
+  );
+  border-image-slice: 1;
+}
+
+.project .project-body {
+  margin-left: 2rem;
+  width: 100%;
+}
+
+.project-body .badges {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.project-body .badges .badge {
+  background-color: #007e58;
+  border-radius: 1rem;
+  padding: 0.1rem 1rem;
+}
+
+.project-body .badges .badge.open-source {
+  background-color: #ff898994;
+}
+.project-body p {
+  color: #dbdbdb;
+}
+.project-body h4 {
+  margin-top: 0;
+}
+
+.project-body .project-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.project-body .project-header a {
+  color: white;
+  text-decoration: none;
+  padding: 10px 25px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 130px;
+  margin-bottom: 1rem;
+}
+
+.project-body .technologies {
+  color: white;
+  font-weight: 600;
+  margin-top: 1rem;
+}
+
+.project-body .technologies-images {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.project-body .technologies-images img {
+  height: fit-content;
+}
+
+.project-body .technologies > div {
+  display: flex;
+  gap: 1rem;
+}
+
+.project-body .technologies > span {
+  margin-bottom: 1rem;
+  display: block;
+}
+
+@media only screen and (min-width: 1024px) {
+  .github-accounts-container .account:hover .account-hover-item {
+    transition-delay: 0.3s;
+    height: 100%;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .skills-and-projects {
+    flex-direction: column;
+    margin-top: 1rem;
+  }
+  .github-accounts-container a:first-child {
+    margin-top: 10px;
+  }
+  .github-accounts-container {
     flex-wrap: wrap;
-		justify-content: center;
-		flex-direction: row;
-	}
-	h1 {
-		font-size:30px;
-	}
-	h2 {
-    font-size: 1.5rem;
-}
-	.p-100{
-		padding:  0 1rem;
-	}
-	.skills-container{
-		margin-right: 2rem;
-		margin-left: 2rem;
-	}
-	.social-media-container{
-		position: relative;
+    justify-content: center;
     flex-direction: row;
-	}
-	.social-media-item.twitter{
-		border-top-right-radius: 0;
-		border-bottom-left-radius: 30px;
-	}
-	.social-media-item.github{
-		border-bottom-left-radius: 0;
-		border-top-right-radius: 30px;
-		border-bottom-right-radius: 30px;
-	}
-	.projects-container .project{
+  }
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  .p-100 {
+    padding: 0 1rem;
+  }
+  .skills-container {
+    margin-right: 2rem;
+    margin-left: 2rem;
+  }
+  .social-media-container {
+    position: relative;
+    flex-direction: row;
+  }
+  .social-media-item.twitter {
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 30px;
+  }
+  .social-media-item.github {
+    border-bottom-left-radius: 0;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+  }
+  .github-accounts-container .account {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     text-align: center;
     margin: 10px;
     padding: 30px;
-		width: 4rem;
+    width: 4rem;
     height: 4rem;
-		font-size: 14px;
-		justify-content: space-evenly;
-		background-color: transparent;
-		border-bottom:1px solid white;
-		color:white;
-	}
-	.projects-item-container{
-		display: flex;
-		justify-content: center;
-	}
-	.projects-container img{
-		margin-right: 0;
-	}
-	.projects-container .project .projects-hover-item{
-		bottom: 0;
-		width: 100%;
-		height: 0;
-	}
-	.projects-container .project:hover .projects-hover-item{
-		height: 100%;
-	}
+    font-size: 14px;
+    justify-content: space-evenly;
+    background-color: transparent;
+    border-bottom: 1px solid white;
+    color: white;
+  }
+  .projects-item-container {
+    display: flex;
+    justify-content: center;
+  }
+  .github-accounts-container img {
+    margin-right: 0;
+  }
+  .github-accounts-container .account .account-hover-item {
+    bottom: 0;
+    width: 100%;
+    height: 0;
+  }
+  .github-accounts-container .account:hover .account-hover-item {
+    height: 100%;
+  }
 
+  /* projects */
+  .projects {
+    gap: 7rem;
+    margin: 3rem;
+    margin-top: 6rem;
+  }
+
+  .project {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project img.project-image {
+    margin: 0;
+    margin-top: -4rem;
+    position: relative;
+  }
+
+  .project .project-body {
+    margin-left: 0;
+    margin-top: 2rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .projects {
+    margin: 1rem;
+  }
+
+  .project {
+    padding: 0.5rem;
+  }
+
+  .project-body .project-header {
+    flex-direction: column;
+    align-items: center;
+    gap: 34px;
+  }
+
+  .project-body .project-header div:has(a) {
+    display: flex;
+    gap: 1rem;
+  }
+
+  .project-body .project-header a {
+    width: 90px;
+  }
+
+  .project-body .project-header a > svg {
+    display: none;
+  }
 }
 
 /* width */
@@ -305,10 +471,10 @@ h2{
 }
 
 ::-webkit-scrollbar-thumb {
-	background: #1d1d1d;
+  background: #1d1d1d;
 }
 ::-webkit-scrollbar-track {
-	background: #f1f1f1;
+  background: #f1f1f1;
 }
 
 /* Handle on hover */
